# VisionPlayback

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DashPackager.cpp  DashPackager.h  DashServer.cpp  DashServer.h  Dockerfile  DownloadWorker.cpp  DownloadWorker.h  LoginDialog.cpp  LoginDialog.h  LoginInfo.h  MainWindow.cpp  MainWindow.h  PlaybackDialog.cpp  PlaybackDialog.h  PlaybackManagerDialog.cpp  PlaybackManagerDialog.h  PlaybackRequest.h  README.md  StreamJobManager.cpp  StreamJobManager.h  VideoKey.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h  main.cpp
.claude/: settings.json
doc/: openapi.yaml
main/: CMakeLists.txt  Session.cpp  Session.h  main.cpp
scripts/: run-docker.sh
scripts/win/: VisionPlayback.bat
src/adapter/: CMakeLists.txt
src/adapter/console/: ConsoleEventLogger.cpp  ConsoleEventLogger.h
src/adapter/dvr/: HCNetSDKDownloader.cpp  HCNetSDKDownloader.h
src/adapter/http/: ApiKeyGuard.cpp  ApiKeyGuard.h  ControlApi.cpp  ControlApi.h  DashFileServer.cpp  DashFileServer.h  HttpListener.cpp  HttpListener.h  JsonCodec.cpp  JsonCodec.h  PollingApi.cpp  PollingApi.h
src/adapter/packaging/: FfmpegDashPackager.cpp  FfmpegDashPackager.h
src/adapter/persistence/: FileSystemStreamCache.h
src/adapter/processor/: PlaybackProcessor.cpp  PlaybackProcessor.h
src/domain/: CMakeLists.txt  CameraIdentity.h  Channel.h  Credentials.h  IAuthenticator.h  IClipExporter.h  IDashPackager.h  IDispatcher.h  IHasher.h  IPlaybackDownloader.h  IStreamCacheRepository.h  PlaybackKey.h  PlaybackRequest.h  PlaybackTime.h  SessionToken.h  Sha256.cpp  Sha256.h  StreamStatus.h  TimeRange.h
src/infra/: CMakeLists.txt  Config.h  HCNetSDKBootstrap.cpp  HCNetSDKBootstrap.h  Sha256.cpp  Sha256.h
src/infra/dispatcher/: QtDispatcher.cpp  QtDispatcher.h
src/infra/dvr/: HCNetSDKAuthenticator.cpp  HCNetSDKAuthenticator.h  HCNetSDKDownloader.cpp  HCNetSDKDownloader.h  HCNetSDKTimeMapper.h
src/infra/hashing/: QtHasher.cpp  QtHasher.h
src/infra/packaging/: FfmpegClipExporter.cpp  FfmpegClipExporter.h  FfmpegDashPackager.cpp  FfmpegDashPackager.h
src/infra/persistence/: FileSystemStreamCache.cpp  FileSystemStreamCache.h
src/usecase/: CMakeLists.txt  LoginUseCase.cpp  LoginUseCase.h  PlaybackKeyFactory.cpp  PlaybackKeyFactory.h  StreamPlaybackUseCase.cpp  StreamPlaybackUseCase.h
src/usecase/ports/: IAuthenticator.h  IDashPackager.h  IPlaybackDownloader.h  IStreamCacheRepository.h
